<resources>
    <string name="app_name">Baking App</string>

    <!-- Content descriptions-->
    <string name="recipe_picture_content_description">Recipe picture</string>
    <string name="recipe_name_content_description">Recipe Name</string>
    <string name="recipe_servings_content_description">A number</string>
    <string name="recipe_servings_label_description">Servings: </string>
    <string name="ingredients">Ingredients</string>
    <string name="steps_label">Steps</string>
    <string name="steps_number">1</string>

    <!-- Error messages-->
    <string name="detail_error_message">Recipes data not available</string>
    <string name="failed_message">Failed to fetch data!</string>

    <!-- Content Ingredient descriptions-->
    <string name="ingredient_quantity">8</string>
    <string name="ingredient_measure">cup</string>
    <string name="ingredient_name">Nutella</string>

    <!-- Steps Video descriptions-->
    <string name="steps_instructions_label">Instructions</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_previous">No previous step</string>
    <string name="no_next">No next step</string>

    <!-- Widget-->
    <string name="add_a_receipe_to_widget">Please go to the App to add a recipe to show on widget</string>
    <string name="added_to_widget">Added to the Widget</string>


</resources>
