<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/dimen_4dp"
    app:cardElevation="@dimen/dimen_4dp"
    android:padding="@dimen/dimen_4dp"
    android:layout_marginBottom="@dimen/dimen_4dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:id="@+id/ingredient_list">

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_small"
        android:textColor="@color/textOnAccent"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_8dp"
        tools:text="@string/ingredient_name"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/ingredient_quantity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_small"
        android:textColor="@color/textOnAccent"
        tools:text="@string/ingredient_quantity"/>

    <TextView
        android:id="@+id/ingredient_measure"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:text="@string/ingredient_measure"
        android:padding="@dimen/dimen_4dp"
        android:textColor="@color/textOnAccent"
        android:textSize="@dimen/font_small"/>

</LinearLayout>
</android.support.v7.widget.CardView>