<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_recipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/recipedefault" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_toRightOf="@id/recipe_image"
        android:textColor="@color/textOnAccent"
        android:textSize="@dimen/font_large"
        tools:text="@string/recipe_name_content_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_toEndOf="@id/recipe_image"
        android:layout_toRightOf="@id/recipe_image"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/recipe_servings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:text="@string/recipe_servings_label_description"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/recipe_servings_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:text="@string/recipe_servings_content_description"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/recipe_image"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorBackground" />

</RelativeLayout>